BREAKING CHANGE: rename User and Config to UserResponse and ConfigResponse, create new User and Config type with JavaScript Date
