# packages/server/api.yaml
@@ -384,7 +384,7 @@ paths:
                   success:
                     type: boolean
                   result:
-                    $ref: '#/components/schemas/User'
+                    $ref: '#/components/schemas/UserResponse'
         '403':
           description: 권한 부족
           content:
@@ -542,7 +542,7 @@ paths:
                   result:
                     type: array
                     items:
-                      $ref: '#/components/schemas/User'
+                      $ref: '#/components/schemas/UserResponse'
         '403':
           description: 권한 부족
           content:
@@ -696,7 +696,7 @@ paths:
                       - SERVICE
                     properties:
                       SERVICE:
-                        $ref: '#/components/schemas/Config'
+                        $ref: '#/components/schemas/ConfigResponse'
         '404':
           description: 설정을 찾을 수 없을 경우
           content:
@@ -915,8 +915,8 @@ components:
         until:
           type: string
           format: date-time
-    User:
-      title: User
+    UserResponse:
+      title: UserResponse
       description: 사용자 정보입니다.
       type: object
       required:
@@ -978,9 +978,9 @@ components:
       description: 사용자 정보를 일괄 삽입하고자 할 때 사용합니다.
       type: array
       items:
-        $ref: '#/components/schemas/User'
-    Config:
-      title: Config
+        $ref: '#/components/schemas/UserResponse'
+    ConfigResponse:
+      title: ConfigResponse
       description: 서비스의 설정 정보입니다.
       type: object
       required:
